--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.3",
+    "contentful": "^8.3.7",
+    "date-fns": "^2.22.1",
+    "date-fns-tz": "^1.1.4",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
